[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "NLOptimizer"
version = "0.1.0"
authors = [
  { name="Hossein FaridNasr", email="hossein.faridnasr2000@gmail.com" },
]
description = "A library to convert natural language into Pyomo optimization models and solve them."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0.0",
    "pyomo>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["."]